--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
-    "undefined": "@react-native-masked-view/masked-view\\"
+    "undefined": "@react-native-masked-view/masked-view\\",
+    "expo-sqlite": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
