--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/(tabs)/_layout.jsx", "app/(tabs)/_layout.jsx", "components/SwitchThemeButton.js", "hooks/ThemeContext.js", "app/(tabs)/home.jsx", "app/(tabs)/index.jsx"  ]
+, "app/(tabs)/_layout.tsx", "app/(tabs)/_layout.tsx", "components/SwitchThemeButton.js", "hooks/ThemeContext.js", "app/(tabs)/home.jsx", "app/(tabs)/index.jsx"  ]
 }
